<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sample.vmax.vmaxsample.MainActivity">

    <LinearLayout
        android:id="@+id/lnAdspotId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/tvAdspotId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/adspot_id" />

        <EditText
            android:id="@+id/editAdspotId"
            android:layout_width="0dp"
            android:text="@string/defaulID"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnSizeWidth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lnAdspotId"
        android:weightSum="3">

        <TextView
            android:id="@+id/tvWidth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/width" />

        <EditText
            android:id="@+id/editWidth"
            android:layout_width="0dp"
            android:text="@string/defaulWidth"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnSizeHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lnSizeWidth"
        android:weightSum="3">

        <TextView
            android:id="@+id/tvHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/height" />

        <EditText
            android:id="@+id/editHeight"
            android:layout_width="0dp"
            android:text="@string/defaulHeight"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCacheAds"
        android:layout_width="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lnSizeHeight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/cache_ads" />

    <TextView
        android:id="@+id/tvCacheAds"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCacheAds"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/no_cache" />

    <Button
        android:id="@+id/btnGoToOtherActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCacheAds"
        android:background="?attr/selectableItemBackground"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/go_to_other_activity" />


    <RelativeLayout
        android:id="@+id/nativeAdLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/aviRefresh"
            style="@style/AVLoadingIndicatorView.Small"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:indeterminate="true"
            android:visibility="visible"
            app:indicatorColor="@color/colorAccent"
            app:indicatorName="BallClipRotatePulseIndicator" />
        </RelativeLayout>
</RelativeLayout>
